inst/aks-helm-chart-nfs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rstudio
  labels:
    app: rstudio
  # annotations:
  #   kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /rstudio
            pathType: Exact
            backend:
              service:
                name: rstudio
                port:
                  number: 80
